--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,6 @@
     <string name="pair_edited">The pair edited</string>
     <string name="pair_moved">The pair moved</string>
     <string name="main_ad_id">ca-app-pub-5872947580733077/7871515385</string>
+    <string name="test_ad_id">ca-app-pub-3940256099942544/6300978111</string>
     <string name="app_ad_id">ca-app-pub-5872947580733077~3947338975</string>
 </resources>
